// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toBeBoolean fails when given a boolean 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toBeBoolean()</intensity>

Expected value to not be of type boolean, received:
  <red>true</color>"
`;

exports[`.not.toBeBoolean fails when given an object of type boolean 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toBeBoolean()</intensity>

Expected value to not be of type boolean, received:
  <red>{}</color>"
`;

exports[`.toBeBoolean fails when not given a boolean 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeBoolean()</intensity>

Expected value to be of type boolean, received:
  <red>1</color>"
`;
